objects/adapps__OptimizerPlus_Formula_Fields_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Formula_Field_Name__c</fullName>
        <label>Formula Fields Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Formula_Fields__c</fullName>
        <label>Formula Fields with JavaScript Code</label>
        <referenceTo>adapps__OptimizerPlus_Formula_Fields__c</referenceTo>
        <relationshipLabel>Formula Fields Items</relationshipLabel>
        <relationshipName>Formula_Fields_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Formula Fields Item</label>
    <nameField>
        <label>Formula Fields Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formula Fields Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>